@@ -1,3 +1,7 @@
+* 2014-01-13 - thorben.betten@open-xchange.com
+
+ - Fix for bug 30571: Load snippet attributes from database, do not parse them from MIME content
+
 * 2013-12-17 - thorben.betten@open-xchange.com
 
  - Fix for bug 30358: Modified HTTP-API call-back pattern to surround injected string with quotes while injected string gets quote-escaped before
